--- a/.github/workflows/validate-assignment.yml
+++ b/.github/workflows/validate-assignment.yml
@@ -42,4 +42,4 @@ jobs:
           # search regex pattern
           regex_pattern: finished
           # path of the file to search
-          path: ./finished.md
+          path: finished.md
